--- a/blogFrontEnd/package.json
+++ b/blogFrontEnd/package.json
@@ -14,6 +14,7 @@
     "@reduxjs/toolkit": "^2.8.2",
     "@tanstack/react-query": "^5.80.6",
     "axios": "^1.8.4",
+    "bootstrap": "^5.3.6",
     "prop-types": "^15.8.1",
     "react": "^19.0.0",
     "react-dom": "^19.0.0",
